# bullstrangle-mcp

./: .gitignore  .mcp.json  README.md  bullstrangle_menu.py  pyproject.toml
.claude/: settings.local.json
osamurai/: BullStrangle_Template.xlsx  os_Excel addin fields.xlsx
references/: Bull Strangle Implementation plan v3  BullStrangle_Architecture_Spec_v3.md  BullStrangle_Decision_Logic_Design.md  BullStrangle_Dry_Run_Runbook.md  BullStrangle_Implementation_Guide.md  BullStrangle_Implementation_Guide_v2.md  BullStrangle_Implementation_Plan_v3.md  BullStrangle_MCP_Workflow_Architecture.md  BullStrangle_Master_Document_Implementation_Plan.md  BullStrangle_Newsletter_MCP_Architecture_Spec_v1.1_JSONB.md  BullStrangle_Schwab_Dependency_Handoff_2026-05-02.md  BullStrangle_SystemArchitecture_v2.md  BullStrangle_Usage_Guide.md  Claude_Daily_Workflow_Prompts.md  Claude_Prompts_BullStrangle.md  gap_analysis_spec_vs_impl_2026-04-26.md  master_document_rule_inventory.md
references/archive/: BullStrangle_MCP_Workflow_Architecture.md  BullStrangle_Master_Document_Implementation_Plan.md
references/refactoring/: Architect_PRD_Review.md  BullStrangle_Product_Spec_Refactor_PRD.md  BullStrangle_Refactor_Design_Notes.md  BullStrangle_Target_Schema_v4.md  (+3 more)
scripts/: check_exit_schema.py  check_rules.py  check_schema.py  check_tables.py
tests/: test_e2e_mcp_server.py  test_ingestion_smoke.py  test_unit_decisions.py  test_unit_menu.py  test_unit_os_workbooks.py  test_unit_parsers.py  test_unit_positions.py  test_unit_rule_catalog.py  test_unit_safety.py  test_unit_symbol_history.py
(+17 files in other folders)
